--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="">
-								Im completely addicted in tecnology and anything like that . I try to make intelligent projects and robust solutions , but simple and friendly.
+								I'm completely addicted in tecnology and anything like that . I try to make intelligent projects and robust solutions , but simple and friendly.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -97,7 +97,7 @@
 
 								<div class="job">
 									<h2>Back-End Developer</h2>
-									<p>Amplo conhecimento em desenvolvimento de APIs usando plataformas <i>Node.js (Javascript)</i>, <i>Scala<i> e <i>.NET (C#)</i>. Usando bases relacionais como MySQL, PostgreSQL e SQL Server e bases de objetos como MongoDB e CouchDB.</p>
+									<p>Amplo conhecimento em desenvolvimento de Restful APIs usando plataformas <i>Node.js (Javascript)</i>, <i>Scala<i> e <i>.NET (C#)</i>. Usando bases relacionais como MySQL, PostgreSQL e SQL Server e bases de objetos como MongoDB e CouchDB.</p>
 								</div>
 
                                 <div class="job last">
@@ -120,7 +120,7 @@
 								<li>Bootstrap</li>
 								<li>JavaScript / jQuery</li>
 								<li>Backbone.js (with tests)</li>
-								<li>AngularJS (with tests)</li>
+								<li class="last">AngularJS (with tests)</li>
 							</ul>
 
 							<ul class="talent">
@@ -131,6 +131,7 @@
 								<li>Grunt / Bower</li>
 								<li>ASP.NET MVC/WebAPI (C#)</li>
 								<li>Entity Framework</li>
+								<li>Scala</li>
 								<li>Memcached</li>
 								<li class="last">Git / GitFlow</li>
 								
@@ -138,11 +139,15 @@
 
 							<ul class="talent">
 								<h2>UX Designer</h2>
+								<li>UX & UI Design</li>
+								<li>Usability Protocols</li>
+								<li>Prototyping</li>
+								<li>Requirements Definition</li>
 								<li>Logo creation</li>
 								<li>Mobile Mockups</li>
 								<li>Responsive layouts (mobile first)</li>
 								<li>Photoshop</li>
-								<li>Illustrator</li>
+								<li class="last">Illustrator</li>
 							</ul>
 						</div>
 					</div><!--// .yui-gf-->
