--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                                 <div class="job last">
 									<h2>User experience Designer</h2>
-									<p>Certa experiência em definição de <i>Arquitetura de Software</i> em equipe. Já palestrei sobre arquitetura <i>Client-Side</i>  (<a href="http://danilojrr.github.com/ArquiteturaJavascript-Slides" target="_blank">link da apresentação</a>)</p>
+									<p>I love do beautifuls things that can be intuitive and friendly for all kind of users. I have been worked on my design skills and constant studying of user interfaces, following all requiriments and usability protocols.</p>
 								</div>
 						</div>
 					</div><!--// .yui-gf -->
