--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								Thiago Pires Sciotta
 							</p>
 							<ul>
-								<li>Rua Barata Ribeiro, 425/902 - Copacabana. Rio de Janeiro - RJ - Brazil.</li>
+								<li>Rio de Janeiro - RJ - Brazil.</li>
 								<li>25 years / Single</li>
                                 <li><i class="fa fa-phone"></i> Phone: +55 (21) 99975-8096</li>
 								<li><i class="fa fa-envelope"></i> E-mail: <a href="mailto:thiagog3@gmail.com">thiagog3@gmail.com</a></li>
@@ -68,7 +68,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="">
-								I'm completely addicted in tecnology and anything like that . I try to make intelligent projects and robust solutions , but simple and friendly.
+								I'm tecnoladdicted in tecnology and anything like that . I'm trying to make intelligent projects and robust solutions , but simple and friendly.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -104,7 +104,7 @@
 
                                 <div class="job last">
 									<h2>User experience Designer</h2>
-									<p>I love do beautifuls things that can be intuitive and friendly for all kind of users. I have been worked on my design skills and constant studying of user interfaces, following all requiriments and usability protocols.</p>
+									<p>I love do beautiful things that can be intuitive and friendly for all kind of users. I have been worked on my design skills and constant studying of user interfaces, following all requiriments and usability protocols.</p>
 								</div>
 						</div>
 					</div><!--// .yui-gf -->
@@ -116,12 +116,13 @@
 						<div class="yui-u">
 							<ul class="talent">
 								<h2>Web Developer</h2>
-                                <li>HTML 5</li>
+                                				<li>HTML 5</li>
 								<li>CSS 3</li>
 								<li>Internet Protocols</li>
 								<li>WebSocket</li>
 								<li>WebRTC</li>
-								<li>LESS with Compass</li>
+								<li>SASS with Compass</li>
+								<li>LESS</li>								
 								<li>Bootstrap</li>
 								<li>JavaScript (Vanilla)</li>
 								<li>jQuery</li>
@@ -135,6 +136,7 @@
 								<li>MongoDB / Mongoose</li>
 								<li>Mocha / Should.js</li>
 								<li>Grunt / Bower</li>
+								<li>PHP / CakePHP</li>
 								<li>ASP.NET MVC/WebAPI (C#)</li>
 								<li>Entity Framework</li>
 								<li>Scala</li>
@@ -157,6 +159,7 @@
 								<li>Responsive layouts (mobile first)</li>
 								<li>Photoshop and Illustrator</li>
 								<li>Remote work (Home-office)</li>
+								<li>UML / Data modeling</li>
 								<li>Scrum / Kanban</li>
 								<li class="last">Git / GitFlow</li>
 							</ul>
@@ -196,7 +199,7 @@
 								<h3>Full-Stack Software Developer</h3>
 								<h4>2010 to 2013</h4>
 								<p class="noBottomMargin">
-									I worked on some .NET based projects including ASP.NET MVC web framework using C#. Including also designing mockups, Javascript code and CSS styles. 
+									I worked on .NET based projects including ASP.NET MVC web framework using C#. I also designed mockups, Javascript coding and CSS styles. 
 								</p>
 							</div>
 
