Updating some data...

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							</p>
 							<ul>
 								<li>Rio de Janeiro - RJ - Brazil.</li>
-								<li>25 years / Single</li>
+								<li>26 years / Single</li>
                                 <li><i class="fa fa-phone"></i> Phone: +55 (21) 99975-8096</li>
 								<li><i class="fa fa-envelope"></i> E-mail: <a href="mailto:thiagog3@gmail.com">thiagog3@gmail.com</a></li>
 								<li><i class="fa fa-globe"></i> Site: <a href="http://sciotta.com" target="_blank">sciotta.com</a></li>
@@ -183,11 +183,19 @@
 						</div><!--// .yui-u -->
 
 						<div class="yui-u">
+							<div class="job">
+								<h2>HUGE Inc</h2>
+								<h3>Front-end Senior</h3>
+								<h4>2016 (actual)</h4>
+								<p class="">
+									I'm working with a top of front-end technologies and applying my knowledges on many national and international projects.
+								</p>
+							</div>
 
 							<div class="job">
 								<h2>Rastreabilide Brasil SA</h2>
 								<h3>Full-Stack Software Archtect</h3>
-								<h4>2015 (actual)</h4>
+								<h4>2015 to 2016</h4>
 								<p class="">
 									Full-Stack Javascript Developer using Backbone.js SPA framework and Node with Express on Back-end and MongoDB. I'm working also with Scala based API. 
 								</p>
