--- a/portuguese.html
+++ b/portuguese.html
@@ -60,7 +60,7 @@
 							</p>
 							<ul>
 								<li>Rio de Janeiro - RJ - Brasil.</li>
-								<li>25 anos / Solteiro</li>
+								<li>26 anos / Solteiro</li>
                                 <li><i class="fa fa-phone"></i> Celular: +55 (21) 99975-8096</li>
 								<li><i class="fa fa-envelope"></i> E-mail: <a href="mailto:thiagog3@gmail.com">thiagog3@gmail.com</a></li>
 								<li><i class="fa fa-globe"></i> Site: <a href="http://sciotta.com.br" target="_blank">sciotta.com.br</a></li>
@@ -186,6 +186,14 @@
 						</div><!--// .yui-u -->
 
 						<div class="yui-u">
+							<div class="job">
+								<h2>HUGE Inc</h2>
+								<h3>Front-end Senior</h3>
+								<h4>2016 (atual)</h4>
+								<p class="">
+									Estou trabalhando com tecnologia font-end de ponta aplicando meus conhecimentos em muitos projetos nacionais e internacionais.
+								</p>
+							</div>
 
 							<div class="job">
 								<h2>Rastreabilide Brasil SA</h2>
