ADD react knowledge

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 								<li>JavaScript (Vanilla)</li>
 								<li>jQuery</li>
 								<li>Backbone.js (with tests)</li>
+								<li>React with Redux (with tests)</li>
 								<li class="last">AngularJS (with tests)</li>
 							</ul>
 
