--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Thiago Sciotta | FullStack Developer / UX Designer</title>
+	<title>Thiago Sciotta | FullStack Developer</title>
 	<meta charset="UTF-8" />
 
 	<meta name="author" content="Thiago Sciotta" />
@@ -41,7 +41,7 @@
 			<div class="yui-gc">
 				<div class="yui-u first">
 					<h1>Thiago Sciotta</h1>
-					<h2>FullStack Developer / UX Designer</h2>
+					<h2>FullStack Developer</h2>
 				</div>				
 
 			</div><!--// .yui-gc -->
@@ -61,7 +61,7 @@
 							</p>
 							<ul>
 								<li>Rio de Janeiro - RJ - Brazil.</li>
-								<li>26 years / Single</li>
+								<li>28 years / Single</li>
                                 								
 <li><i class="fa fa-envelope"></i> E-mail: <a href="mailto:thiagog3@gmail.com">thiagog3@gmail.com</a></li>
 								<li><i class="fa fa-globe"></i> Site: <a href="http://sciotta.com" target="_blank">sciotta.com</a></li>
@@ -78,7 +78,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="noBottomMargin">
-								I'm tecnoladdicted in tecnology and anything like that . I'm trying to make intelligent projects and robust solutions , but simple and friendly.
+								I'm tecnoaddicted in tecnology and anything like that. I'm trying to make smart projects and robust solutions but simple and friendly.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -89,8 +89,8 @@
 						</div>
 						<div class="yui-u">
 							<div class="job last">
-								<h2>UniCesumar - Centro Universitário de Maringá</h2>
-								<h3>Course: Software Engineering</h3>
+								<h2>Estácio de Sá</h2>
+								<h3>Course: Information Technology Management</h3>
 	                            <p class="noBottomMargin">Status: In progress</p>
                         	</div>
 						</div>
@@ -114,7 +114,7 @@
 
                                 <div class="job last">
 									<h2>User experience Designer</h2>
-									<p class="noBottomMargin">I love do beautiful things that can be intuitive and friendly for all kind of users. I have been worked on my design skills and constant studying of user interfaces, following all requiriments and usability protocols.</p>
+									<p class="noBottomMargin">I love doing beautiful things that can be intuitive and friendly for all kind of users. I have been worked on my design skills and constant studying of user interfaces, following all requirements and usability protocols.</p>
 								</div>
 						</div>
 					</div><!--// .yui-gf -->
@@ -126,7 +126,7 @@
 						<div class="yui-u">
 							<ul class="talent">
 								<h2>Web Developer</h2>
-                                				<li>HTML 5</li>
+                                <li>HTML 5</li>
 								<li>CSS 3</li>
 								<li>Internet Protocols</li>
 								<li>WebSocket</li>
@@ -134,22 +134,25 @@
 								<li>SASS with Compass</li>
 								<li>LESS</li>								
 								<li>Bootstrap</li>
-								<li>JavaScript (Vanilla)</li>
+								<li>JavaScript (ES8)</li>
 								<li>jQuery</li>
 								<li>Backbone.js (with tests)</li>
 								<li>React with Redux (with tests)</li>
-								<li class="last">AngularJS (with tests)</li>
+								<li>AngularJS 1.5/5 (with tests)</li>
+								<li class="last">Cordova with Ionic</li>
 							</ul>
 
 							<ul class="talent">
-								<h2>Back-End Dev.</h2>
+								<h2>Back-End and Devops</h2>
 								<li>Node.js / Express.js</li>
 								<li>MongoDB / Mongoose</li>
 								<li>Mocha / Should.js</li>
 								<li>Grunt / Bower</li>
-								<li>PHP / CakePHP</li>
+								<li>Selenium Tests</li>
+								<li>Java JSF</li>
 								<li>ASP.NET MVC/WebAPI (C#)</li>
 								<li>Entity Framework</li>
+								<li>AWS (EC2, RDS, Lambda...)</li>
 								<li>Scala</li>
 								<li>Memcached</li>
 								<li>MySQL</li>
@@ -163,9 +166,9 @@
 								<h2>UX and Process</h2>
 								<li>UX & UI Design</li>
 								<li>Usability Protocols</li>
+								<li>Persona definitions</li>
 								<li>Prototyping</li>
 								<li>Requirements Definition</li>
-								<li>Logo creation</li>
 								<li>Mobile Mockups</li>
 								<li>Responsive layouts (mobile first)</li>
 								<li>Photoshop and Illustrator</li>
@@ -185,11 +188,21 @@
 
 						<div class="yui-u">
 							<div class="job">
-								<h2>HUGE Inc</h2>
-								<h3>Front-end Senior</h3>
+								<h2>Veriz Tecnologia</h2>
+								<h3>Full-Stack Software Archtect</h3>
 								<h4>2016 (actual)</h4>
 								<p class="">
-									I'm working with a top of front-end technologies and applying my knowledges on many national and international projects.
+									I'm working completely remote with C# and Nodejs microservices based and Angular 5 to develop front-end. I also occasionally support Android (Java) development.
+								</p>
+							</div>
+
+							<div class="job">
+								<h2>HUGE Inc</h2>
+								<h3>Front-end Senior</h3>
+								<h4>2016 to 2017</h4>
+								<p class="">
+									I worked with a top of front-end technologies and applying my knowledges on many national and international projects and supporting others developers. I also
+									interacted with all designers and ux teams.
 								</p>
 							</div>
 
